# Shell_In_Rust

./: Cargo.toml  README.md  println!({}, words[1..].join( )),
src/: cmd.rs  main.rs  shell.rs
tests/: shell_test.rs
